[project]
name = "rag-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain-community>=0.4.1",
    "langchain[openai]>=1.2.13",
    "langsmith>=0.7.23",
    "pandas>=3.0.2",
]
